<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="section_favorites">Favorites</string>
</resources>